# android3

./: README.md  build.gradle  settings.gradle  动手练习参考答案.docx  源码说明与导入办法.txt  第18章的实战项目高德key值申请步骤.docx  课后练习题（除动手练习）参考答案.docx
app/: build.gradle
app/src/main/: AndroidManifest.xml
chapter02/: build.gradle
chapter02/src/main/: AndroidManifest.xml
chapter03/: build.gradle
chapter03/src/main/: AndroidManifest.xml
chapter04/: build.gradle
chapter04/src/main/: AndroidManifest.xml
chapter05/: build.gradle
chapter05/src/main/: AndroidManifest.xml
chapter06/: build.gradle
chapter06/src/main/: AndroidManifest.xml
chapter07/: build.gradle
chapter07/src/main/: AndroidManifest.xml
chapter08/: build.gradle
chapter08/src/main/: AndroidManifest.xml
chapter09/: build.gradle
chapter09/src/main/: AndroidManifest.xml
chapter10/: build.gradle  test.jks
chapter10/src/main/: AndroidManifest.xml
chapter11/: build.gradle
chapter11/src/main/: AndroidManifest.xml
chapter12/: build.gradle
chapter12/src/main/: AndroidManifest.xml
chapter13/: build.gradle
chapter13/src/main/: AndroidManifest.xml
chapter14/: build.gradle
chapter15/: build.gradle
chapter15/src/main/jni/: Android.mk  CMakeLists.txt  get_cpu.cpp  get_decrypt.cpp  get_encrypt.cpp
chapter15/src/main/jni/djvudroid/: ByteStream.cpp
chapter16/: build.gradle
chapter17/: build.gradle
chapter18/: build.gradle
chapter19/: agconnect-services.json  build.gradle
chapter20/: build.gradle
gradle/wrapper/: gradle-wrapper.properties
hmsml/: build.gradle
(+1180 files in other folders)
